@@ -1958,10 +1958,13 @@ void XYCurvePrivate::updateValues() {
 			return;
 		}
 
-		const int endRow{qMin(numberOfPoints, valuesColumn->rowCount())};
+		const int endRow{qMin(qMin(xColumn->rowCount(), yColumn->rowCount()), valuesColumn->rowCount())};
 		auto xColMode{valuesColumn->columnMode()};
+		int index = 0;	// index of valid points (logicalPoints)
 		for (int i = 0; i < endRow; ++i) {
-			if (!m_pointVisible.at(i))
+			// ignore value labels for invalid data points
+			// otherwise the assignment to the data points get lost
+			if (!xColumn->isValid(i) || xColumn->isMasked(i) || !yColumn->isValid(i) || yColumn->isMasked(i) || !m_pointVisible.at(index++))
 				continue;
 
 			if (!valuesColumn->isValid(i) || valuesColumn->isMasked(i)) {
@@ -3022,6 +3025,7 @@ void XYCurvePrivate::drawSymbols(QPainter* painter) {
 }
 
 void XYCurvePrivate::drawValues(QPainter* painter) {
+	//QDEBUG(Q_FUNC_INFO << ", value strings = " << m_valueStrings)
 	int i = 0;
 	for (const auto& point : qAsConst(m_valuePoints)) {
 		painter->translate(point);
