@@ -4,6 +4,7 @@
 		* HDF5: support VLEN data import
 Bug fixes:
 	* [spreadsheet] properly paste the data in the format 'yyyy-MM-dd hh:mm:ss' and similar
+	* [xy-curve] fix using custom value label with invalid data points (BUG 455214)
 -----2.9.0 (03.05.2022) -----
 	* [general]
 		* Allow to copy&paste and to duplicate single objects in the project explorer
